# valAgent

./: .env.example  .gitignore  ETL_PPT.pptx  README.md  main.py  pyproject.toml
data/: validations.db
examples/: api_client_example.py  example_validation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  History.tsx  Query.tsx  Results.tsx  Schema.tsx  Validate.tsx
frontend/src/store/: validationStore.ts
scripts/: quickstart.sh
src/etl_validator/: __init__.py  cli.py
src/etl_validator/agents/: __init__.py  validation_agent.py
src/etl_validator/api/: __init__.py  app.py  dependencies.py  routes.py
src/etl_validator/core/: __init__.py  config.py  database.py  exceptions.py
src/etl_validator/models/: __init__.py  results.py  rules.py  schema.py  test_case.py
src/etl_validator/services/: __init__.py  executor_service.py  llm_service.py  schema_service.py  validation_orchestrator.py
src/etl_validator/utils/: __init__.py  helpers.py  logger.py
src/valagent/: __init__.py  cli.py
src/valagent/api/: __init__.py  app.py  routes.py  schemas.py
src/valagent/config/: __init__.py  settings.py
src/valagent/database/: __init__.py  connection.py  models.py  repository.py
src/valagent/engine/: __init__.py  comparator.py  engine.py  executor.py
src/valagent/llm/: __init__.py  client.py  prompts.py  sql_generator.py
src/valagent/reports/: __init__.py  generator.py  templates.py
src/valagent/static/: index.html
src/valagent/utils/: __init__.py  json_encoder.py  logging.py
tests/: __init__.py  conftest.py  test_api.py  test_comparator.py  test_models.py  test_utils.py
